# medical-chatgpt

./: .gitignore  README.md  install_pdm.sh  pyproject.toml  setup.py
medical_chatgpt/: medical_chatgpt.py
