[tool.pdm]

[project]
name = "medical-chatgpt"
version = "0.0.1"
description = "Medical ChatGPT"
authors = [
    {name = "Phil Wang",email = "lucidrains@gmail.com"},
]
dependencies = [
    "einops>=0.6",
    "torch>=1.6",
    "django-ninja>=0.20.0",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "MIT"}
keywords = ["artificial intelligence", "deep learning", "transformers", "attention mechanism", "reinforcement learning with human feedback"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/lucidrains/medical-chatgpt"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
